--- a/killrweather-app/src/main/resources/reference.conf
+++ b/killrweather-app/src/main/resources/reference.conf
@@ -18,6 +18,8 @@ spark {
   # The batch interval must be set based on the latency requirements
   # of your application and available cluster resources.
   streaming.batch.interval = ${?SPARK_STREAMING_BATCH_INTERVAL}
+
+  ui.port = ${?SPARK_WORKER_WEBUI_PORT}
 }
 
 # Undefined values are expected to be set by the user in their application.conf file
